<?xml version="1.0" encoding="UTF-8"?>


<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.ikm.tinkar</groupId>
        <artifactId>tinkar-data</artifactId>
        <version>1.8.0-SNAPSHOT</version>
    </parent>
  
    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<tinkar-core.version>1.91.0-SNAPSHOT</tinkar-core.version>
    </properties>

	<artifactId>tinkar-starter-data</artifactId>
	<name>tinkar-starter-data</name>

	<url>http://maven.apache.org</url>

	<dependencies>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>common</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>entity</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>composer</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.jpms</groupId>
			<artifactId>eclipse-collections-api</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>data-spinedarray-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>executor-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>entity-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>data-ephemeral-provider</artifactId>
		</dependency>	
			
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
		</dependency>

		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>reasoner-elk-snomed</artifactId>
		</dependency>
		
		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>reasoner-elk-owl</artifactId>
		</dependency>		

		<dependency>
			<groupId>dev.ikm.tinkar</groupId>
			<artifactId>reasoner-hybrid</artifactId>
			
		</dependency>	

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<!--<scope>test</scope>-->
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-console</artifactId>
			<scope>test</scope>
		</dependency>		
	</dependencies>

	<build>
<!--		<pluginManagement>-->
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<!--<testFailureIgnore>true</testFailureIgnore>-->
						<forkCount>0</forkCount> 
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>

		        <plugin>
                	<groupId>dev.ikm.tinkar</groupId>
                	<artifactId>tinkar-data-maven-plugin</artifactId>
                	<executions>
                    	<execution>
                        	<id>load-data</id>
                        	<goals>
                            	<goal>generate-data</goal>
                        	</goals>
                        	<configuration>
                            	<dataStore>${project.build.directory}/tinkar-starter-data</dataStore>
								<exportFile>${project.build.directory}/tinkar-export-starter-data-pb.zip</exportFile>
                        	</configuration>
                    	</execution>
                	</executions>
            	</plugin>
            
            	<plugin>
                	<groupId>org.codehaus.mojo</groupId>
                	<artifactId>build-helper-maven-plugin</artifactId>
                
                	<executions>
                    	<execution>
                        	<id>attach-artifacts</id>
                        	<phase>compile</phase>
                        	<goals>
                            	<goal>attach-artifact</goal>
                        	</goals>
                        
                        	<configuration>
                            	<artifacts>
                                	<artifact>
                                    	<file>${project.build.directory}/tinkar-export-starter-data-pb.zip</file>
                                    	<type>zip</type>
                                    	<classifier>tinkar-export-pb</classifier>
                                	</artifact>
                            	</artifacts>
                        	</configuration>
                    	</execution>
                	</executions>
            </plugin>
        </plugins>
		<!--</pluginManagement>-->
		
	    <resources>
	        <resource>
	            <directory>src/main/resources</directory>
	            <includes>
	                <include>META-INF/services/**</include>
	            </includes>
	        </resource>
	    </resources>	
	</build>
</project>
